nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx-deployment
spec:
  strategy:
    type: Recreate
  replicas: 3
  selector:
    matchLabels:
      app: nginx-template
  template:
    metadata:
      labels:
        app: nginx-template
    spec:
      containers:
      - name: nginx-container
        image: nginx:latest
        ports:
        - containerPort: 80		
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-svc
  labels:
    app: nginx-template
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: nginx-template
	
apiVersion: extensions/v1
kind: Ingress
metadata:
    name: nginx-ingress
    annotations:
      kubernetes.io/tls-acme: 'true'
      kubernetes.io/ingress.class: nginx
    labels:
      app: nginx-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: nginx-service
          servicePort: 8080
